# fastapi-with-traefik

./: pyproject.toml
app/: main.py
