[tool.poetry]
name = "fastapi-with-traefik"
version = "0.1.0"
description = ""
authors = ["Hajar Razip <mshajarrazip@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_with_traefik"}]

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
